--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,1 +1,1 @@
-Rewritten Lovense system to support different toy features per version with fallback support
+Fixed many bugs with the XToys system.
